--- a/src/components/featuredMovie.css
+++ b/src/components/featuredMovie.css
@@ -40,8 +40,6 @@
     font-size: 20px;
     color: #999;
     max-width: 40%;
-    max-height: 170px;
-    overflow: hidden;
 }
 .featured--buttons {
     margin-top: 15px;
@@ -74,4 +72,27 @@
     margin-top: 15px;
     font-size: 18px;
     color: #999;
+}
+@media (max-width:760px) {
+    .featured {
+        height: 90vh;
+    }
+    .featured--name {
+        font-size: 40px;
+    }
+    .featured--info {
+        font-size: 16px;
+    }
+    .featured--description {
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+    .featured--watchbutton,
+    .featured--mylistbutton {
+        font-size: 16px;
+    }
+    .featured--genres {
+        font-size: 14px;
+    }
 }
